rafael_rios/session-01/exercise-02/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-02
  labels: 
    exercise: "02"
    rol: db-wp
spec:
  replicas: 1
  template:
    metadata:
      labels: 
        exercise: "02"
        rol: db-wp
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports: 
        - name: mariadb-port
          containerPort: 3306
