rafael_rios/session-01/exercise-02/mariadb-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: wp-mariadb
  namespace: exercise-02
spec:
  type: ClusterIP
  ports:
  - name: mariadb-port
    port: 3306
    targetPort: mariadb-port
  selector:
    exercise: "02"
    rol: db-wp
