rafael_rios/session-01/exercise-02/wordpress-svc.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: wp-web
  namespace: exercise-02
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: wp-http
  - name: https
    port: 443
    targetPort: wp-https
  selector:
    rol: web-wp
